--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,14 +7,13 @@
   android:paddingLeft="0dp"
   android:paddingRight="0dp">
 
-
-
   <ListView
-    android:id="@android:id/list"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:drawSelectorOnTop="false" />
+      android:id="@android:id/list"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_weight="1"
+      android:choiceMode="singleChoice"
+      android:drawSelectorOnTop="true" />
 
 	<include layout="@layout/player"/>
 </LinearLayout>
