* fixed player controls

--- a/res/layout/player.xml
+++ b/res/layout/player.xml
@@ -3,7 +3,9 @@
     	<RelativeLayout
     	    android:layout_width="match_parent"
     	    android:layout_height="wrap_content"
-    	    android:layout_gravity="bottom" >
+    	    android:layout_gravity="bottom"
+    	    android:layout_weight="0"
+    	     >
 
      <!-- Player Footer -->
 
