--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,7 +13,25 @@
 		    android:layout_width="match_parent"
 		    android:layout_height="0dp"
 		    android:layout_weight="1"
-		    tools:context=".MainActivity" />
+		    tools:context=".MainActivity"
+		    
+		     />
+
+		<RelativeLayout
+		    android:id="@+id/loading"
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent"
+		    android:layout_gravity="center_vertical|center_horizontal"
+		    android:layout_weight="100"
+		    android:gravity="center_horizontal|center_vertical" >
+		
+			<ImageView
+			    
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:src="@drawable/jamood_gray" />
+
+		</RelativeLayout>
 
 		<ImageView
 		    android:id="@+id/albumArtLarge"
@@ -23,7 +41,8 @@
 		    android:layout_weight="1"
 		    android:scaleType="fitXY"
 		    android:visibility="gone" />
-		       
+		
+
 		<include layout="@layout/player"/>
 
 </LinearLayout>
